# Hackathon2024

./: .gitignore  Dockerfile  Dockerfile.dev  GitVersion.yml  README.md  config.py  docker-compose.yml  init-mongo.js  package-lock.json  pinecone_script.py  pyproject.toml  run.py  testconsole.py
.azure-devops/: dev-cd.yml  dev-ci.yml  release.yml
.devcontainer/: devcontainer.json
Requests/: api.http
app/: __init__.py  intrumentation.py  openai_client.py  otel_setup.py  utils.py
app/chat/: chat_completions_generator.py  chat_repo.py  chatbt.py  prompt_processor.py  prompts.py  views.py
app/core/: base_completions_generator.py  base_conversation_repo.py  base_prompt_processor.py  conversation_repo.py
app/hackathon/: agent_service.py  consultant_ai.py  duckdb_repo.py  orchestrator.py  prompts.py  report_completions_generator.py  views.py
app/models/: conversation.py  conversation_context.py
app/report/: orchestrator.py  prompt_processor.py  prompts.py  report_ai.py  report_completions_generator.py  report_repo.py  views.py
app/services/: mongo_service.py  pinecone_service.py
data/: KBResults_cleaned.csv  XMLDocumentation_cleaned_utf8.csv  apidocumentation.csv  bigtimeacademykb_updated_incremented.csv
data/raw_data/: report_field_descriptions_raw.csv
deploy/: gunicorn.conf.py  gunicorn.sh
tests/: conftest.py  test_factory.py
tests/chat/: test_chat_repo.py  test_chatbt.py  test_conversation.py
websrc/: index.html  package-lock.json  package.json
websrc/src/: App.tsx  dashboard.css  index.css  main.tsx  risks-trends.css
(+30 files in other folders)
